[gd_scene load_steps=5 format=3 uid="uid://c6f5x4lwxvpf8"]

[ext_resource type="Script" path="res://Menus/Menu Principal/MenuPrincipal.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://n44ma32a6mle" path="res://Menus/Sonidos/boton.wav" id="2"]
[ext_resource type="AudioStream" uid="uid://cvbkp16vae5lh" path="res://Menus/Sonidos/Musica.ogg" id="3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dkw1i"]

[node name="MenuPrincipal" type="Node"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jugar"

[node name="boton" type="AudioStreamPlayer2D" parent="VBoxContainer/Jugar"]
stream = ExtResource("2")

[node name="Creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Creditos"

[node name="boton" type="AudioStreamPlayer2D" parent="VBoxContainer/Creditos"]
position = Vector2(0, -32)
stream = ExtResource("2")

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"
icon = SubResource("AtlasTexture_dkw1i")

[node name="boton" type="AudioStreamPlayer2D" parent="VBoxContainer/Salir"]
position = Vector2(0, -32)
stream = ExtResource("2")

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
position = Vector2(131, 39)
stream = ExtResource("3")

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
